2020-01-29  Jonathan Bedard  <jbedard@apple.com>

        run-safari / run-webkit-tests --ios-simulator not working with XCode 13.3.1 (11C504)
        https://bugs.webkit.org/show_bug.cgi?id=206932

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitpy/xcode/simulated_device.py:
        (SimulatedDeviceManager.get_runtime_for_device_type): Request for a device running
        some version will return a runtime of the same major version with a minor version
        that is equal to or greater than the specified minor version.
        * Scripts/webkitpy/xcode/simulated_device_unittest.py:
        (test_matching_up_success):
        (test_matching_up_failure):

2020-01-28  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Give up IC when unknown structure transition happens
        https://bugs.webkit.org/show_bug.cgi?id=206846

        Reviewed by Mark Lam.

        Add `crash!` annotation, which allows us to write a crashing JS test.

        * Scripts/run-jsc-stress-tests:
        * Scripts/webkitruby/jsc-stress-test-writer-default.rb:
        * Scripts/webkitruby/jsc-stress-test-writer-playstation.rb:
        * Scripts/webkitruby/jsc-stress-test-writer-ruby.rb:

2020-01-29  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] Add api-gtk to EWS bubbles.
        https://bugs.webkit.org/show_bug.cgi?id=206930

        Reviewed by Aakash Jain.

        A new queue has been added to the EWS to run GTK API tests in r255238.
        The queue is now running fine with no pre-existent failures.
        Let's add it to the EWS bubbles.

        * BuildSlaveSupport/ews-app/ews/views/statusbubble.py:
        (StatusBubble):

2020-01-29  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] Fix TestWebKitAPI/TestJSC:/jsc/options API test after r255314
        https://bugs.webkit.org/show_bug.cgi?id=206927

        Reviewed by Carlos Garcia Campos.

        Update the default value tested from 4MB to 5MB.
